--- a/src/app/dashboard/dashboard.page.html
+++ b/src/app/dashboard/dashboard.page.html
@@ -31,7 +31,7 @@
     <ion-modal [keepContentsMounted]="true">
       <ng-template>
         <ion-datetime presentation="date" id="datetime" displayFormat="DD/MM/YYYY" [(ngModel)]="fechaHoraSeleccionada" ></ion-datetime>
-        <ion-button (click)="datgraf(credgraf)" >filtro</ion-button>
+        <ion-button (click)="dashboard(credashboard)" >filtro</ion-button>
       </ng-template>
     </ion-modal>
     
@@ -40,7 +40,7 @@
     <ion-modal [keepContentsMounted]="true">
       <ng-template>
         <ion-datetime presentation="date" id="datetime1" displayFormat="DD/MM/YYYY" [(ngModel)]="fechaHoraSeleccionada2"></ion-datetime>
-        <ion-button (click)="datgraf(credgraf)" >filtro</ion-button>
+        <ion-button (click)="dashboard(credashboard)" >filtro</ion-button>
       </ng-template>
       
     </ion-modal>
