--- a/src/app/inicio/inicio.page.html
+++ b/src/app/inicio/inicio.page.html
@@ -35,7 +35,7 @@
         {{agendaData.celular1}}
       </ion-card-content>
 
-      <ion-button id="open-modal" fill="clear" (click)="setOpen(true,i,agendaData.numeroservicio)" >Detalles</ion-button>
+      <ion-button id="open-modal" fill="clear" (click)="setOpen(true,i,agendaData.numeroservicio,agendaData.idagenda)" >Detalles</ion-button>
 
 
 
