--- a/src/app/dashboard/dashboard.page.html
+++ b/src/app/dashboard/dashboard.page.html
@@ -30,8 +30,8 @@
 
     <ion-modal [keepContentsMounted]="true">
       <ng-template>
-        <ion-datetime presentation="date" id="datetime" displayFormat="DD/MM/YYYY" [(ngModel)]="fechaHoraSeleccionada" ></ion-datetime>
-        <ion-button (click)="dashboard(credashboard)" >filtro</ion-button>
+        <ion-datetime  id="datetime" displayFormat="DD/MM/YYYY" [(ngModel)]="fechaHoraSeleccionada" ></ion-datetime>
+
       </ng-template>
     </ion-modal>
     
@@ -39,7 +39,7 @@
 
     <ion-modal [keepContentsMounted]="true">
       <ng-template>
-        <ion-datetime presentation="date" id="datetime1" displayFormat="DD/MM/YYYY" [(ngModel)]="fechaHoraSeleccionada2"></ion-datetime>
+        <ion-datetime  id="datetime1" displayFormat="DD/MM/YYYY" [(ngModel)]="fechaHoraSeleccionada2"></ion-datetime>
         <ion-button (click)="dashboard(credashboard)" >filtro</ion-button>
       </ng-template>
       
