--- a/src/app/dashboard/dashboard.page.html
+++ b/src/app/dashboard/dashboard.page.html
@@ -31,7 +31,7 @@
     <ion-modal [keepContentsMounted]="true">
       <ng-template>
         <ion-datetime  id="datetime" displayFormat="DD/MM/YYYY" [(ngModel)]="fechaHoraSeleccionada" ></ion-datetime>
-
+        <ion-button (click)="dashboard(credashboard)" >filtro</ion-button>
       </ng-template>
     </ion-modal>
     
