fix(resumen)ajuste de resumen

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -3,7 +3,7 @@
     <ion-card-header style="margin-bottom: 10%;margin-top: 10%;">
       <img [src]="imageUrl" alt="Mi imagen" />
       <ion-card-title>INGRESO CUADRILLAS </ion-card-title>
-      <ion-card-subtitle>App Cuadrillas Bitwan</ion-card-subtitle>
+      <ion-card-subtitle></ion-card-subtitle>
     </ion-card-header>
     <ion-card-content>
       <ion-input label="Usuario" label-placement="floating" fill="outline" placeholder="Enter text" #alias></ion-input>
