--- a/src/app/inicio/inicio.page.html
+++ b/src/app/inicio/inicio.page.html
@@ -56,7 +56,7 @@
             </ion-buttons>
             <ion-title></ion-title>
             <ion-buttons slot="end">
-              <ion-button (click)="laborselect(agendaData[target].nombretiposolicitud)" [strong]="true">Iniciar operación</ion-button>
+              <ion-button (click)="laborselect(agendaData[target].nombretiposolicitud)" [strong]="true">{{ estado }}</ion-button>
             </ion-buttons>
           </ion-toolbar>
         </ion-header>
