--- a/src/app/labores/labores.page.html
+++ b/src/app/labores/labores.page.html
@@ -2,13 +2,13 @@
   <ion-header>
 
     <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages; let i = index">
-      <ion-item routerDirection="root" (click)="logout(p.title)" [routerLink]="[p.url]" lines="none" detail="false" routerLinkActive="selected" style="margin-top: 5%;margin-left: 5%;margin-right: 5%;">
+      <ion-item routerDirection="root" (click)="logout(p.title)" [href]="[p.url]" lines="none" detail="false" routerLinkActive="selected" style="margin-top: 5%;margin-left: 5%;margin-right: 5%;">
         <ion-icon aria-hidden="true" slot="start" [ios]="p.icon + '-outline'" [md]="p.icon + '-sharp'"></ion-icon>
         <ion-label>{{ p.title }}</ion-label>
       </ion-item>
     </ion-menu-toggle>
   </ion-header>
-  
+
 </ion-menu>
 <div class="ion-page" id="main-content">
   <ion-header>
@@ -19,14 +19,14 @@
       <ion-title>Labores Operación</ion-title>
     </ion-toolbar>
   </ion-header>
-  <ion-content class="ion-padding"> 
+  <ion-content class="ion-padding">
     <ion-tabs>
       <ion-tab-bar slot="top">
         <ion-tab-button (click)="consumos()">
           <ion-icon name="library"></ion-icon>
           Consumos
         </ion-tab-button>
-        
+
         <ion-tab-button  (click)="desplaza()">
           <ion-icon name="paper-plane"></ion-icon>
           Desplazamientos
@@ -40,7 +40,7 @@
           <ion-icon name="warning"></ion-icon>
           Casos Especiales
         </ion-tab-button>
-    
+
       </ion-tab-bar>
     </ion-tabs>
 
@@ -72,7 +72,7 @@
 
 
 
- 
+
 
 
 
