put(congelacion pagina)

--- a/src/app/consumos/consumos.page.html
+++ b/src/app/consumos/consumos.page.html
@@ -2,13 +2,13 @@
   <ion-header>
 
     <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages; let i = index">
-      <ion-item routerDirection="root" (click)="logout(p.title)" [routerLink]="[p.url]" lines="none" detail="false" routerLinkActive="selected" style="margin-top: 5%;margin-left: 5%;margin-right: 5%;">
+      <ion-item routerDirection="root" (click)="logout(p.title)" [href]="[p.url]" lines="none" detail="false" routerLinkActive="selected" style="margin-top: 5%;margin-left: 5%;margin-right: 5%;">
         <ion-icon aria-hidden="true" slot="start" [ios]="p.icon + '-outline'" [md]="p.icon + '-sharp'"></ion-icon>
         <ion-label>{{ p.title }}</ion-label>
       </ion-item>
     </ion-menu-toggle>
   </ion-header>
-  
+
 </ion-menu>
 <div class="ion-page" id="main-content">
   <ion-header>
@@ -28,7 +28,7 @@
         <ion-icon name="archive"></ion-icon>
         labores
       </ion-tab-button>
-    
+
       <ion-tab-button  (click)="desplaza()">
         <ion-icon name="paper-plane"></ion-icon>
         desplazamientos
@@ -42,30 +42,30 @@
         <ion-icon name="warning"></ion-icon>
         casos especiales
       </ion-tab-button>
-      
+
     </ion-tab-bar>
   </ion-tabs>
-  
+
   <div class="ion-padding" >
-    
+
     <ion-item style="margin-top: 15%; " >
       <ion-select  label="Material"    label-placement="fixed" placeholder="Material" [(ngModel)]="idaa" >
         <ion-select-option   value="{{laboress.id}}" *ngFor="let laboress of laboress">{{laboress.nombre}}</ion-select-option>
       </ion-select>
   </ion-item>
-  
+
   <ion-item  >
     <ion-input  label="Cantidad" type="number" placeholder="(Metros/Unidades)" [(ngModel)]="cant"></ion-input>
   </ion-item>
-  
+
   <ion-fab style="margin-top: 2%;margin-left: 40%;">
     <ion-fab-button (click)="agregar(crearconsum)">
       <ion-icon name="add"></ion-icon>
   </ion-fab-button>
   </ion-fab>
- 
-  
-  
+
+
+
 
   <br>
   <br>
