--- a/src/app/casespecial/casespecial.page.html
+++ b/src/app/casespecial/casespecial.page.html
@@ -2,13 +2,13 @@
   <ion-header>
 
     <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages; let i = index">
-      <ion-item routerDirection="root" (click)="logout(p.title)" [routerLink]="[p.url]" lines="none" detail="false" routerLinkActive="selected" style="margin-top: 5%;margin-left: 5%;margin-right: 5%;">
+      <ion-item routerDirection="root" (click)="logout(p.title)" [href]="[p.url]" lines="none" detail="false" routerLinkActive="selected" style="margin-top: 5%;margin-left: 5%;margin-right: 5%;">
         <ion-icon aria-hidden="true" slot="start" [ios]="p.icon + '-outline'" [md]="p.icon + '-sharp'"></ion-icon>
         <ion-label>{{ p.title }}</ion-label>
       </ion-item>
     </ion-menu-toggle>
   </ion-header>
-  
+
 </ion-menu>
 <div class="ion-page" id="main-content">
   <ion-header>
@@ -31,7 +31,7 @@
         <ion-icon name="library"></ion-icon>
         Consumos
       </ion-tab-button>
-      
+
       <ion-tab-button  (click)="desplaza()">
         <ion-icon name="paper-plane"></ion-icon>
         Desplazamientos
@@ -41,7 +41,7 @@
         <ion-icon name="eye"></ion-icon>
         Observación
       </ion-tab-button>
-      
+
     </ion-tab-bar>
   </ion-tabs>
 
