--- a/src/app/desp/desp.page.html
+++ b/src/app/desp/desp.page.html
@@ -2,13 +2,13 @@
   <ion-header>
 
     <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages; let i = index">
-      <ion-item routerDirection="root" (click)="logout(p.title)" [routerLink]="[p.url]" lines="none" detail="false" routerLinkActive="selected" style="margin-top: 5%;margin-left: 5%;margin-right: 5%;">
+      <ion-item routerDirection="root" (click)="logout(p.title)" [href]="[p.url]" lines="none" detail="false" routerLinkActive="selected" style="margin-top: 5%;margin-left: 5%;margin-right: 5%;">
         <ion-icon aria-hidden="true" slot="start" [ios]="p.icon + '-outline'" [md]="p.icon + '-sharp'"></ion-icon>
         <ion-label>{{ p.title }}</ion-label>
       </ion-item>
     </ion-menu-toggle>
   </ion-header>
-  
+
 </ion-menu>
 <div class="ion-page" id="main-content">
   <ion-header>
@@ -19,9 +19,9 @@
       <ion-title>Desplazamientos</ion-title>
     </ion-toolbar>
   </ion-header>
-  <ion-content class="ion-padding"> 
+  <ion-content class="ion-padding">
 
-        
+
     <ion-tabs>
       <ion-tab-bar slot="top">
         <ion-tab-button  (click)="labores()">
@@ -40,10 +40,10 @@
           <ion-icon name="warning"></ion-icon>
           Casos Especiales
         </ion-tab-button>
-    
+
       </ion-tab-bar>
     </ion-tabs>
-    
+
 
     <ion-item style="margin-top: 15%;">
       <ion-select label="Origen" label-placement="fixed" placeholder="Trayecto realizado" [(ngModel)]="cant">
@@ -55,7 +55,7 @@
         <ion-select-option style="min-width: 100px;padding: 15px;"  *ngFor="let muni of muni" >{{muni}}</ion-select-option>
       </ion-select>
     </ion-item>
-    
+
     <ion-fab style="margin-top: 3%;margin-left: 40%;">
       <ion-fab-button (click)="agregar(creadez)">
         <ion-icon name="add"></ion-icon>
