fix(general)solucion pruebas

--- a/src/app/observ/observ.page.html
+++ b/src/app/observ/observ.page.html
@@ -55,7 +55,7 @@
     </ion-item>
 
 
-    <ion-button expand="block" style="margin-bottom: 5px;"  (click)="error()">Agregar</ion-button>
+    <ion-button expand="block" style="margin-bottom: 5px;"  (click)="agregar(creaobservaciones)">Agregar</ion-button>
   </ion-card-content>
 </ion-card>
 
