--- a/src/app/micasoesp/micasoesp.page.html
+++ b/src/app/micasoesp/micasoesp.page.html
@@ -27,7 +27,7 @@
     <ion-modal [keepContentsMounted]="true">
       <ng-template>
         <ion-datetime  presentation="date" id="datetime" displayFormat="DD/MM/YYYY" [(ngModel)]="fechaHoraSeleccionada"></ion-datetime>
-        <ion-button (click)="filtrarr(casoscre)">filtro</ion-button>
+        
       </ng-template>
     </ion-modal>
     
@@ -36,11 +36,13 @@
     <ion-modal [keepContentsMounted]="true">
       <ng-template>
         <ion-datetime  presentation="date" id="datetime1" displayFormat="DD/MM/YYYY" [(ngModel)]="fechaHoraSeleccionada2"></ion-datetime>
-        <ion-button (click)="filtrarr(casoscre)">filtro</ion-button>
+
       </ng-template>
       
     </ion-modal>
-
+    <br>
+    <ion-button (click)="filtrarr(casoscre)" style="width: 100%;">filtro</ion-button>
+    <br>
     <h2>Horas Totales Aceptadas: {{sumatoria}}</h2>
 
     <ion-card style="margin-top: 2%;" *ngFor="let casData of casData">
