--- a/src/app/observ/observ.page.html
+++ b/src/app/observ/observ.page.html
@@ -59,7 +59,9 @@
   </ion-card-content>
 </ion-card>
 
-
+<ion-card>
+  <ion-card-content>{{observacion}}  </ion-card-content>
+</ion-card>
 
 
 <ion-toast trigger="open-toast" message="Se regreso al menu pricipal, operacion en pausa" [duration]="3000"></ion-toast>
