--- a/src/app/labores/labores.page.html
+++ b/src/app/labores/labores.page.html
@@ -1,79 +1,79 @@
-<ion-menu contentId="main-content">
+<ion-menu side="start" menuId="first" contentId="main-content" >
   <ion-header>
-
-    <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages; let i = index">
-      <ion-item routerDirection="root" (click)="logout(p.title)" [href]="[p.url]" lines="none" detail="false" routerLinkActive="selected" style="margin-top: 5%;margin-left: 5%;margin-right: 5%;">
-        <ion-icon aria-hidden="true" slot="start" [ios]="p.icon + '-outline'" [md]="p.icon + '-sharp'"></ion-icon>
-        <ion-label>{{ p.title }}</ion-label>
-      </ion-item>
-    </ion-menu-toggle>
-  </ion-header>
-
-</ion-menu>
-<div class="ion-page" id="main-content">
-  <ion-header>
-    <ion-toolbar>
-      <ion-buttons slot="start">
-        <ion-menu-button></ion-menu-button>
-      </ion-buttons>
-      <ion-title>Labores Operación</ion-title>
+    <ion-toolbar >
+      <ion-title>Labores</ion-title>
     </ion-toolbar>
   </ion-header>
-  <ion-content class="ion-padding">
-    <ion-tabs>
-      <ion-tab-bar slot="top">
-        <ion-tab-button (click)="consumos()">
-          <ion-icon name="library"></ion-icon>
-          Consumos
-        </ion-tab-button>
-
-        <ion-tab-button  (click)="desplaza()">
-          <ion-icon name="paper-plane"></ion-icon>
-          Desplazamientos
-        </ion-tab-button>
-        <ion-tab-button  (click)="observ()">
-          <ion-icon name="eye"></ion-icon>
-          Observación
-        </ion-tab-button>
-
-        <ion-tab-button  (click)="casos()">
-          <ion-icon name="warning"></ion-icon>
-          Casos Especiales
-        </ion-tab-button>
-
-      </ion-tab-bar>
-    </ion-tabs>
-
-    <ion-item style="margin-top: 15%;">
-      <ion-select label="Labor"  label-placement="fixed" placeholder="Labor Realizada" [(ngModel)]="cant">
-        <ion-select-option  value="{{laboress.id}}" *ngFor="let laboress of laboress">{{laboress.nombre}}</ion-select-option>
-      </ion-select>
-    </ion-item>
-    <ion-fab style="margin-top: 2%;margin-left: 40%;">
-      <ion-fab-button (click)="agregar(crealabor)">
-        <ion-icon name="add"></ion-icon>
-      </ion-fab-button>
-    </ion-fab>
-    <br>
-    <br>
-    <br>
-
-    <ion-card *ngFor="let datalabores of datalabores" style="z-index: 0;">
-      <ion-card-content>
-        <h3>{{datalabores.nombre}}</h3>
-      </ion-card-content>
-    </ion-card>
-
-
-    <ion-toast trigger="open-toast" message="Se regreso al menu pricipal, operacion en pausa" [duration]="3000"></ion-toast>
-
+  <ion-content>
+    <ion-list>
+      <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages; let i = index">
+        <ion-item [routerLink]="p.url" (click)="logout(p.title)" routerDirection="root">
+          <ion-icon slot="start" [name]="p.icon"></ion-icon>
+          <ion-label>{{ p.title }}</ion-label>
+        </ion-item>
+      </ion-menu-toggle>
+    </ion-list>
   </ion-content>
-</div>
+</ion-menu>
+
+  <ion-header>
+    <ion-toolbar>
+      <ion-buttons slot="start" (onclick)=openCustom()>
+        <ion-menu-button></ion-menu-button>
+      </ion-buttons>
+      <ion-title> Observaciones</ion-title>
+    </ion-toolbar>
+  </ion-header>
+<ion-content>
+<ion-tabs>
+ <ion-tab-bar slot="top" style="margin-top: 20%;">
+   <ion-tab-button (click)="consumos()">
+     <ion-icon name="library"></ion-icon>
+     Consumos
+   </ion-tab-button>
+
+   <ion-tab-button  (click)="desplaza()">
+     <ion-icon name="paper-plane"></ion-icon>
+     Desplazamientos
+   </ion-tab-button>
+   <ion-tab-button  (click)="observ()">
+     <ion-icon name="eye"></ion-icon>
+     Observación
+   </ion-tab-button>
+
+   <ion-tab-button  (click)="casos()">
+     <ion-icon name="warning"></ion-icon>
+     Casos Especiales
+   </ion-tab-button>
+
+ </ion-tab-bar>
+</ion-tabs>
+
+<ion-item style="margin-top: 40%;">
+ <ion-select label="Labor"  label-placement="fixed" placeholder="Labor Realizada" [(ngModel)]="cant">
+   <ion-select-option  value="{{laboress.id}}" *ngFor="let laboress of laboress">{{laboress.nombre}}</ion-select-option>
+ </ion-select>
+</ion-item>
+<ion-fab style="margin-top: 2%;margin-left: 40%;">
+ <ion-fab-button (click)="agregar(crealabor)">
+   <ion-icon name="add"></ion-icon>
+ </ion-fab-button>
+</ion-fab>
+<br>
+<br>
+<br>
 
 
 
+<ion-card *ngFor="let datalabores of datalabores" style="z-index: 0;">
+ <ion-card-content>
+   <h3>{{datalabores.nombre}}</h3>
+ </ion-card-content>
+</ion-card>
+
+
+<ion-toast trigger="open-toast" message="Se regreso al menu pricipal, operacion en pausa" [duration]="3000"></ion-toast>
 
 
 
-
-
+</ion-content>
