--- a/src/app/desp/desp.page.html
+++ b/src/app/desp/desp.page.html
@@ -52,12 +52,12 @@
 
     <ion-item style="margin-top: 15%;">
       <ion-select label="Origen" label-placement="fixed" placeholder="Trayecto realizado" [(ngModel)]="cant">
-        <ion-select-option style="min-width: 100px;padding: 15px;"  *ngFor="let arregloSinDuplicados of arregloSinDuplicados" >{{arregloSinDuplicados}}</ion-select-option>
+        <ion-select-option style="min-width: 100px;padding: 15px;"  *ngFor="let muni of muni" >{{muni}}</ion-select-option>
       </ion-select>
     </ion-item>
     <ion-item style="margin-top: 5%;">
       <ion-select label="Destino" label-placement="fixed" placeholder="Trayecto realizado" [(ngModel)]="cantt">
-        <ion-select-option style="min-width: 100px;padding: 15px;"  *ngFor="let arregloSinDuplicados of arregloSinDuplicados" >{{arregloSinDuplicados}}</ion-select-option>
+        <ion-select-option style="min-width: 100px;padding: 15px;"  *ngFor="let muni of muni" >{{muni}}</ion-select-option>
       </ion-select>
     </ion-item>
 
