fix(angular16)se actualizo ultima version estable de angular

--- a/src/app/casespecial/casespecial.page.html
+++ b/src/app/casespecial/casespecial.page.html
@@ -16,10 +16,11 @@
       <ion-buttons slot="start">
         <ion-menu-button></ion-menu-button>
       </ion-buttons>
-      <ion-title>Consumos</ion-title>
+      <ion-title>Casos Especiales</ion-title>
     </ion-toolbar>
   </ion-header>
   
+
 <ion-content class="container">
   <ion-tabs >
     <ion-tab-bar slot="top">
