--- a/src/app/miconsumo/miconsumo.page.html
+++ b/src/app/miconsumo/miconsumo.page.html
@@ -1,4 +1,4 @@
-<ion-menu contentId="main-content" >
+<ion-menu contentId="main-content" menuId="miconsumo">
   <ion-header>
 
     <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages; let i = index">
@@ -15,7 +15,7 @@
   <ion-header>
     <ion-toolbar>
       <ion-buttons slot="start">
-        <ion-menu-button></ion-menu-button>
+        <ion-menu-button (click)="toggleMenu()"></ion-menu-button>
       </ion-buttons>
       <ion-title>Mis Consumos</ion-title>
     </ion-toolbar>
