--- a/src/app/observ/observ.page.html
+++ b/src/app/observ/observ.page.html
@@ -1,4 +1,4 @@
-<ion-menu contentId="main-content">
+<ion-menu contentId="main-content" menuId="observ">
   <ion-header>
 
     <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages; let i = index">
@@ -14,7 +14,7 @@
   <ion-header>
     <ion-toolbar>
       <ion-buttons slot="start">
-        <ion-menu-button></ion-menu-button>
+        <ion-menu-button (click)="toggleMenu()"></ion-menu-button>
       </ion-buttons>
       <ion-title>Obvservaciones</ion-title>
     </ion-toolbar>
@@ -52,7 +52,8 @@
 
   <ion-card-content>
     <ion-item>
-      <ion-input label="descripción" placeholder="" [(ngModel)]="descrip" [clearInput]="true"></ion-input>
+      <ion-textarea  label="descripción" autoGrow="true" [(ngModel)]="descrip"></ion-textarea>
+     
     </ion-item>
 
 
@@ -61,7 +62,14 @@
 </ion-card>
 
 <ion-card>
-  <ion-card-content>{{observacion}}  </ion-card-content>
+  <ion-card-content autoGrow="true"> </ion-card-content>
+  <span
+    contenteditable="true"
+    class="editable-span"
+    (input)="adjustHeight($event)"
+  >
+  {{observacion}} <ion-button fill="clear"  (click)="edit()"><ion-icon name="create-outline"></ion-icon> </ion-button>
+</span>
 </ion-card>
 
 
