--- a/src/app/casespecial/casespecial.page.html
+++ b/src/app/casespecial/casespecial.page.html
@@ -69,7 +69,7 @@
     <ion-row>
       <ion-col><h5>{{cards.descripcion}}</h5></ion-col>
       <ion-col><h4>{{cards.tiempo}}</h4></ion-col>
-      <ion-col><ion-button  fill="clear"    (click)="eliminar(cards.idcasoespeciales)">
+      <ion-col><ion-button  fill="clear"  [disabled]="isButtonDisabled"  (click)="eliminar(cards.idcasoespeciales)">
         <ion-icon slot="icon-only" name="trash-outline"  size="large"></ion-icon>
       </ion-button></ion-col>
     </ion-row>
