--- a/src/app/observ/observ.page.html
+++ b/src/app/observ/observ.page.html
@@ -16,7 +16,7 @@
       <ion-buttons slot="start">
         <ion-menu-button (click)="toggleMenu()"></ion-menu-button>
       </ion-buttons>
-      <ion-title>Obvservaciones</ion-title>
+      <ion-title>Observaciones</ion-title>
     </ion-toolbar>
   </ion-header>
   
@@ -55,9 +55,15 @@
       <ion-textarea  label="descripción" autoGrow="true" [(ngModel)]="descrip"></ion-textarea>
      
     </ion-item>
+    <ion-button expand="block" style="margin-bottom: 5px;" id="present-alert" >Agregar</ion-button>
 
+    <ion-alert
+    trigger="present-alert"
+    header="Se sobre escribira la observacion"
+    [buttons]="alertButtons"
+    
+  ></ion-alert>
 
-    <ion-button expand="block" style="margin-bottom: 5px;"  (click)="agregar(creaobservaciones)">Agregar</ion-button>
   </ion-card-content>
 </ion-card>
 
@@ -73,7 +79,7 @@
 </ion-card>
 
 
-<ion-toast trigger="open-toast" message="Se regreso al menu pricipal, operacion en pausa" [duration]="3000"></ion-toast>
+
 
 </ion-content>
 </div>
